# c-toxcore

./: .cirrus.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .restyled.yaml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  appveyor.yml  azure-pipelines.yml  build.zig  build.zig.zon  cmake-android  codecov.yml  conanfile.py  configure.ac  netlify.toml  sonar-project.properties
.circleci/: cmake-asan  cmake-cfisan  cmake-tsan  cmake-ubsan  config.yml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: settings.yml
.github/scripts/: cmake-alpine-s390x  cmake-android  cmake-freebsd  cmake-freebsd-stage2  cmake-linux  cmake-osx  cmake-windows.sh  coverage-linux  flags-clang.sh  flags-gcc.sh  flags.sh  sonar-prepare
.github/workflows/: amalgamation_test.yml  amalgamation_test_win64.yml  build.yml  ci.yml  ci_cross_arm64.yml  ci_cross_mips.yml  ci_cross_riscv64.yml  ci_cross_s390x.yml  codeql.yml  custom_tests_asan.yml  custom_tests_tsan.yml  deploy.yml  docker.yml  post-submit.yml  tcc.yml
.localrun/: generate_amalgamation.sh
.travis/: autotools-linux  cmake-freebsd-stage2  cmake-linux  cmake-windows.sh  flags-clang.sh  flags.sh  tox-bootstrapd-docker
amalgamation/: amalgamation_test.c  toxcore_amalgamation.c  toxcore_amalgamation_no_toxav.c
auto_tests/: BUILD.bazel  CMakeLists.txt  Makefile.inc  TCP_test.c  announce_client_test.c  announce_lookups_test.c  announce_test.c  auto_test_support.c  auto_test_support.h  bootstrap_test.c  conference_av_test.c  conference_double_invite_test.c  conference_invite_merge_test.c  conference_peer_nick_test.c  conference_simple_test.c  conference_test.c  conference_two_test.c  crypto_test.c  dht_getnodes_api_test.c  dht_test.c  encryptsave_test.c  file_saving_test.c  file_transfer_test.c  forwarding_test.c  friend_connection_test.c  friend_request_spam_test.c  group_announce_test.c  group_general_test.c  group_invite_test.c  group_message_test.c  group_moderation_test.c  group_save_test.c  group_state_test.c  group_sync_test.c  group_tcp_test.c  group_topic_test.c  invalid_tcp_proxy_test.c  invalid_udp_proxy_test.c  lan_discovery_test.c  lossless_packet_test.c  (+32 more)
auto_tests/scenarios/: BUILD.bazel  scenario_group_by_id_test.c
cmake/: Dependencies.cmake  ModulePackage.cmake  StrictAbi.cmake
docs/: DHT-Group-Chats.md  DHT_Group_Chats.md  DHT_Group_Chats_Packet_Spec.md  Group-Chats.md  av_api.md  filetransfer_v2a.md  minpgc.md
other/: BUILD.bazel  DHT_bootstrap.c  bootstrap_node_packets.c  make_single_file  windows_build_script_toxcore.sh
other/analysis/: check_includes  check_recursion  gen-file.sh  run-clang  run-clang-analyze  run-clang-tidy  run-cppcheck  run-gcc  run-infer  variants.sh
other/astyle/: astylerc  format-source
other/bootstrap_daemon/: BUILD.bazel  CMakeLists.txt
other/deploy/: android.sh  build.sh  deps.sh  ios.sh  linux.sh  macos.sh
other/event_tooling/: run_local  (+1 more)
other/fun/: BUILD.bazel  CMakeLists.txt  bootstrap_node_info.py  cracker.c  cracker_simple.c  create_common.h  create_minimal_savedata.c  create_savedata.c  make-funny-savefile.py  save-generator.c  sign.c  strkey.c
other/http_proxy/: BUILD.bazel  http_proxy.go
super_donators/: grencez_tok5.c
testing/: BUILD.bazel  CMakeLists.txt  DHT_test.c  Dockerfile  Messenger_test.c  afl_toxsave.c  coverage_live.sh  decrypt_save.c  distill_corpus.sh  load_save.cc  misc_tools.c  misc_tools.h  random_testing.cc  run_afl.sh  trace.cc
testing/bench/: tox_friends_scaling_bench.cc
testing/fuzzing/: BUILD.bazel  CMakeLists.txt  bootstrap_fuzz_test.cc  bootstrap_harness.cc  e2e_fuzz_test.cc  func_conversion.h  fuzz_adapter.c  fuzz_adapter.h  fuzz_support.cc  fuzz_support.h  fuzz_support.hh  fuzz_tox.h  network_adapter.c  network_adapter.h  protodump.cc  protodump_reduce.cc  toxsave_harness.cc
testing/netprof/: CMakeLists.txt
testing/support/: BUILD.bazel  CMakeLists.txt  tox_network_test.cc
testing/support/doubles/: fake_network_stack.cc  fake_network_stack.hh  fake_network_udp_test.cc  fake_random.hh  fake_sockets.cc  fake_sockets.hh  network_universe.cc
testing/support/public/: simulated_environment.hh  simulation.hh
testing/support/src/: simulated_environment.cc  simulation.cc  tox_runner.cc
toxav/: BUILD.bazel  Makefile.inc  audio.c  audio.h  audio_bench.cc  bwcontroller.c  bwcontroller.h  groupav.c  groupav.h  msi.c  msi.h  ring_buffer.c  ring_buffer_test.cc  rtp.c  rtp.h  rtp_bench.cc  rtp_test.cc  toxav.c  toxav.h  toxav_hacks.h  toxav_old.c  video.c  video.h  video_bench.cc
toxcore/: BUILD.bazel  DHT.c  DHT.h  DHT_fuzz_test.cc  DHT_test.cc  DHT_test_util.cc  DHT_test_util.h  DHT_test_util.hh  LAN_discovery.c  LAN_discovery.h  Makefile.inc  Messenger.c  Messenger.h  TCP_client.c  TCP_client.h  TCP_client_test.cc  TCP_common.c  TCP_common.h  TCP_connection.c  TCP_connection.h  TCP_connection_test.cc  TCP_server.c  TCP_server.h  TCP_server_fuzz_test.cc  TCP_server_impl.h  announce.c  announce.h  announce_client.c  announce_client.h  announce_lookups.c  announce_lookups.h  attributes.h  bin_pack.c  bin_pack.h  bin_pack_test.cc  bin_unpack.c  bin_unpack.h  ccompat.c  ccompat.h  crypto_core.api.h  (+154 more)
toxcore/events/: conference_connected.c  conference_invite.c  conference_message.c  conference_peer_list_changed.c  conference_peer_name.c  conference_title.c  dht_get_nodes_response.c  dht_nodes_response.c  event_macros.h  events_alloc.c  events_alloc.h  file_chunk_request.c  file_recv.c  file_recv_chunk.c  file_recv_control.c  friend_connection_status.c  friend_lossless_packet.c  friend_lossy_packet.c  friend_message.c  friend_name.c  friend_read_receipt.c  friend_request.c  friend_status.c  friend_status_message.c  friend_typing.c  group_custom_packet.c  group_custom_private_packet.c  group_invite.c  group_join_fail.c  group_message.c  group_moderation.c  group_password.c  group_peer_exit.c  group_peer_join.c  group_peer_limit.c  group_peer_name.c  group_peer_status.c  group_privacy_state.c  group_private_message.c  group_self_join.c  (+6 more)
toxencryptsave/: BUILD.bazel  Makefile.inc  toxencryptsave.c  toxencryptsave.h
(+61 files in other folders)
