load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/project:build_defs.bzl", "project")

package(features = ["layering_check"])

project()

genrule(
    name = "public_headers",
    srcs = [
        "toxav.h",
        "tox.h",
        "toxencryptsave.h",
        "//c-toxcore/toxav:toxav.h",
        "//c-toxcore/toxcore:tox.h",
        "//c-toxcore/toxcore:tox_attributes.h",
        "//c-toxcore/toxcore:tox_logger.h",
        "//c-toxcore/toxcore:tox_memory.h",
        "//c-toxcore/toxcore:tox_network.h",
        "//c-toxcore/toxcore:tox_random.h",
        "//c-toxcore/toxcore:tox_system.h",
        "//c-toxcore/toxcore:tox_time.h",
        "//c-toxcore/toxencryptsave:toxencryptsave.h",
    ],
    outs = [
        "tox/toxav.h",
        "tox/tox.h",
        "tox/toxencryptsave.h",
        "tox/toxav/toxav.h",
        "tox/toxcore/tox.h",
        "tox/toxcore/tox_attributes.h",
        "tox/toxcore/tox_logger.h",
        "tox/toxcore/tox_memory.h",
        "tox/toxcore/tox_network.h",
        "tox/toxcore/tox_random.h",
        "tox/toxcore/tox_system.h",
        "tox/toxcore/tox_time.h",
        "tox/toxencryptsave/toxencryptsave.h",
    ],
    cmd = """
        cp $(location toxav.h) $(GENDIR)/c-toxcore/tox/toxav.h
        cp $(location tox.h) $(GENDIR)/c-toxcore/tox/tox.h
        cp $(location toxencryptsave.h) $(GENDIR)/c-toxcore/tox/toxencryptsave.h
        cp $(location //c-toxcore/toxav:toxav.h) $(GENDIR)/c-toxcore/tox/toxav/toxav.h
        cp $(location //c-toxcore/toxcore:tox.h) $(GENDIR)/c-toxcore/tox/toxcore/tox.h
        cp $(location //c-toxcore/toxcore:tox_attributes.h) $(GENDIR)/c-toxcore/tox/toxcore/tox_attributes.h
        cp $(location //c-toxcore/toxcore:tox_logger.h) $(GENDIR)/c-toxcore/tox/toxcore/tox_logger.h
        cp $(location //c-toxcore/toxcore:tox_memory.h) $(GENDIR)/c-toxcore/tox/toxcore/tox_memory.h
        cp $(location //c-toxcore/toxcore:tox_network.h) $(GENDIR)/c-toxcore/tox/toxcore/tox_network.h
        cp $(location //c-toxcore/toxcore:tox_random.h) $(GENDIR)/c-toxcore/tox/toxcore/tox_random.h
        cp $(location //c-toxcore/toxcore:tox_system.h) $(GENDIR)/c-toxcore/tox/toxcore/tox_system.h
        cp $(location //c-toxcore/toxcore:tox_time.h) $(GENDIR)/c-toxcore/tox/toxcore/tox_time.h
        cp $(location //c-toxcore/toxencryptsave:toxencryptsave.h) $(GENDIR)/c-toxcore/tox/toxencryptsave/toxencryptsave.h
    """,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "c-toxcore",
    hdrs = [":public_headers"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//c-toxcore/toxav",
        "//c-toxcore/toxcore",
        "//c-toxcore/toxencryptsave",
    ],
)
